# pumaguard-tensorflow-snap

./: Makefile  multiarch-helper.sh  pyproject.toml
pumaguard_tensorflow/: __init__.py  main.py
snap/: snapcraft.yaml
snap/hooks/: configure-backup
