[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools-scm >= 8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pumaguard"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">= 3.10, < 4.0"
authors = [
    {name = "Nicolas Bock", email = "nicolasbock@gmail.com"}
]
dependencies = [
    "flask ~= 3.1",
    "flask-cors ~= 6.0",
    "matplotlib ~= 3.10",
    "packaging ~= 25.0",
    "pandas ~= 2.3",
    "pillow ~= 11.1",
    "pyyaml ~= 6.0",
    "tensorflow ~= 2.20",
    "ultralytics ~= 8.3",
    "requests ~= 2.32",
]

[project.optional-dependencies]
dev = [
    "ansible-lint ~= 25.2; platform_system != 'Windows'",
    "ansible ~= 10.7",
    "bashate ~= 2.1",
    "black ~= 25.9",
    "build ~= 1.3",
    "isort ~= 6.0",
    "mypy ~= 1.18",
    "passlib ~= 1.7",
    "pylint ~= 3.3",
    "pytest-cov ~= 7.0",
    "pytest ~= 8.3",
]
extra-dev = [
    "ipykernel ~= 6.29",
    "opencv-python ~= 4.11",
    "plotly ~= 6.0",
    "scipy ~= 1.15",
]
# and-cuda = ["tensorflow-and-cuda ~= 2.19; platform_system != 'Windows'"]

[project.urls]
Homepage = "http://pumaguard.rtfd.io/"
Repository = "https://github.com/PEEC-Nature-Youth-Group/pumaguard"

[project.scripts]
pumaguard-tensorflow = 'pumaguard_tensorflow.main:main'

[tool.setuptools.packages.find]
include = ["pumaguard*", "scripts*"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = true
include_trailing_comma = true
multi_line_output = "VERTICAL_HANGING_INDENT"
py_version = 310
split_on_trailing_comma = true

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79

[tool.basedpyright]
reportUnusedCallResult = "hint"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
